--- a/domain_comparison/Comparision_domain_slicing_rdm.ipynb
+++ b/domain_comparison/Comparision_domain_slicing_rdm.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-05T23:37:48.738413Z",
-     "end_time": "2023-07-05T23:37:48.782056Z"
+     "start_time": "2023-07-05T23:54:17.269299Z",
+     "end_time": "2023-07-05T23:54:17.316706Z"
     }
    },
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -54,9 +54,9 @@
    ],
    "source": [
     "t1_mean_rdm = pd.read_csv('./data/t1_mean_rdm.csv')\n",
-    "t1_mean = pd.read_csv('./data/t1_mean_smu.csv')\n",
+    "t1_mean_smu = pd.read_csv('./data/t1_mean_smu.csv')\n",
     "\n",
-    "U_statistic, p_value = stats.mannwhitneyu(t1_mean_rdm['mean'], t1_mean['mean'])\n",
+    "U_statistic, p_value = stats.mannwhitneyu(t1_mean_rdm['mean'], t1_mean_smu['mean'])\n",
     "\n",
     "# Print the results\n",
     "print(\"Mann-Whitney U statistic:\", U_statistic)\n",
@@ -69,8 +69,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T23:37:48.747242Z",
-     "end_time": "2023-07-05T23:37:48.802061Z"
+     "start_time": "2023-07-05T23:54:17.275367Z",
+     "end_time": "2023-07-05T23:54:17.334277Z"
     }
    }
   },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
@@ -113,9 +113,9 @@
    ],
    "source": [
     "t2_mean_rdm = pd.read_csv('./data/t2_mean_rdm.csv')\n",
-    "t2_mean = pd.read_csv('./data/t2_mean_smu.csv')\n",
+    "t2_mean_smu = pd.read_csv('./data/t2_mean_smu.csv')\n",
     "\n",
-    "U_statistic, p_value = stats.mannwhitneyu(t2_mean_rdm['mean'], t2_mean['mean'])\n",
+    "U_statistic, p_value = stats.mannwhitneyu(t2_mean_rdm['mean'], t2_mean_smu['mean'])\n",
     "\n",
     "#printing the results\n",
     "print(\"Mann-Whitney U statistic:\", U_statistic)\n",
@@ -128,8 +128,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T23:37:48.764190Z",
-     "end_time": "2023-07-05T23:37:48.802443Z"
+     "start_time": "2023-07-05T23:54:17.286402Z",
+     "end_time": "2023-07-05T23:54:17.334737Z"
     }
    }
   },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
@@ -158,9 +158,9 @@
    ],
    "source": [
     "pr_mean_rdm = pd.read_csv('./data/pr_mean_rdm.csv')\n",
-    "pr_mean = pd.read_csv('./data/pr_mean_smu.csv')\n",
+    "pr_mean_smu = pd.read_csv('./data/pr_mean_smu.csv')\n",
     "\n",
-    "U_statistic, p_value = stats.mannwhitneyu(pr_mean_rdm['mean'], pr_mean['mean'])\n",
+    "U_statistic, p_value = stats.mannwhitneyu(pr_mean_rdm['mean'], pr_mean_smu['mean'])\n",
     "\n",
     "#printing the results\n",
     "print(\"Mann-Whitney U statistic:\", U_statistic)\n",
@@ -173,8 +173,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T23:37:48.769661Z",
-     "end_time": "2023-07-05T23:37:48.802757Z"
+     "start_time": "2023-07-05T23:54:17.292472Z",
+     "end_time": "2023-07-05T23:54:17.335048Z"
     }
    }
   },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -202,10 +202,10 @@
     }
    ],
    "source": [
-    "dna_mean_smu = pd.read_csv('./data/dna_mean_rdm.csv')\n",
-    "dna_mean = pd.read_csv('./data/dna_mean_smu.csv')\n",
+    "dna_mean_rdm = pd.read_csv('./data/dna_mean_rdm.csv')\n",
+    "dna_mean_smu = pd.read_csv('./data/dna_mean_smu.csv')\n",
     "\n",
-    "U_statistic, p_value = stats.mannwhitneyu(dna_mean_smu['mean'], dna_mean['mean'])\n",
+    "U_statistic, p_value = stats.mannwhitneyu(dna_mean_rdm['mean'], dna_mean_smu['mean'])\n",
     "\n",
     "#printing the results\n",
     "print(\"Mann-Whitney U statistic:\", U_statistic)\n",
@@ -218,8 +218,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T23:37:48.774858Z",
-     "end_time": "2023-07-05T23:37:48.803087Z"
+     "start_time": "2023-07-05T23:54:17.298135Z",
+     "end_time": "2023-07-05T23:54:17.335343Z"
     }
    }
   },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
@@ -247,10 +247,10 @@
     }
    ],
    "source": [
-    "tetra_mean_smu = pd.read_csv('./data/tetra_mean_rdm.csv')\n",
-    "tetra_mean = pd.read_csv('./data/tetra_mean_smu.csv')\n",
+    "tetra_mean_rdm = pd.read_csv('./data/tetra_mean_rdm.csv')\n",
+    "tetra_mean_smu = pd.read_csv('./data/tetra_mean_smu.csv')\n",
     "\n",
-    "U_statistic, p_value = stats.mannwhitneyu(tetra_mean_smu['mean'], tetra_mean['mean'])\n",
+    "U_statistic, p_value = stats.mannwhitneyu(tetra_mean_rdm['mean'], tetra_mean_smu['mean'])\n",
     "\n",
     "#printing the results\n",
     "print(\"Mann-Whitney U statistic:\", U_statistic)\n",
@@ -263,8 +263,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T23:37:48.781666Z",
-     "end_time": "2023-07-05T23:37:48.804204Z"
+     "start_time": "2023-07-05T23:54:17.303881Z",
+     "end_time": "2023-07-05T23:54:17.335879Z"
     }
    }
   },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
@@ -292,10 +292,10 @@
     }
    ],
    "source": [
-    "reg_mean_smu = pd.read_csv('./data/reg_mean_rdm.csv')\n",
-    "reg_mean = pd.read_csv('./data/reg_mean_smu.csv')\n",
+    "reg_mean_rdm = pd.read_csv('./data/reg_mean_rdm.csv')\n",
+    "reg_mean_smu = pd.read_csv('./data/reg_mean_smu.csv')\n",
     "\n",
-    "U_statistic, p_value = stats.mannwhitneyu(reg_mean_smu['mean'], reg_mean['mean'])\n",
+    "U_statistic, p_value = stats.mannwhitneyu(reg_mean_rdm['mean'], reg_mean_smu['mean'])\n",
     "\n",
     "#printing the results\n",
     "print(\"Mann-Whitney U statistic:\", U_statistic)\n",
@@ -308,21 +308,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T23:37:48.785722Z",
-     "end_time": "2023-07-05T23:37:48.804260Z"
+     "start_time": "2023-07-05T23:54:17.309815Z",
+     "end_time": "2023-07-05T23:54:17.335989Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T23:37:48.790292Z",
-     "end_time": "2023-07-05T23:37:48.804526Z"
+     "start_time": "2023-07-05T23:54:17.314802Z",
+     "end_time": "2023-07-05T23:54:17.336010Z"
     }
    }
   }
