--- a/domain_comparison/Domain_slicing.ipynb
+++ b/domain_comparison/Domain_slicing.ipynb
@@ -2,15 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:51.538933Z",
-     "end_time": "2023-07-05T22:51:51.608391Z"
+     "start_time": "2023-07-05T23:58:56.471888Z",
+     "end_time": "2023-07-05T23:58:56.673082Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/frido/anaconda3/envs/topic02_team02/lib/python3.10/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+     ]
+    }
+   ],
    "source": [
     "#I will write a function, that takes in an aminoacid sequence and the positions where this sequence is to sliced. By this, further domain comparisons are made possible\n",
     "import pandas as pd\n",
@@ -25,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T23:00:30.724505Z",
-     "end_time": "2023-07-05T23:00:30.778987Z"
+     "start_time": "2023-07-05T23:58:56.673430Z",
+     "end_time": "2023-07-05T23:58:56.721804Z"
     }
    },
    "outputs": [],
@@ -40,11 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:51.590620Z",
-     "end_time": "2023-07-05T22:51:51.624963Z"
+     "start_time": "2023-07-05T23:58:56.710814Z",
+     "end_time": "2023-07-05T23:58:56.727769Z"
     }
    },
    "outputs": [
@@ -53,7 +62,7 @@
       "text/plain": "     mutant                                   mutated_sequence  DMS_score  \\\n1919  T102Q  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.516971   \n1920  T102P  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.344032   \n1921  T102R  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.224089   \n1922  T102Y  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.365929   \n1923  T102V  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.252546   \n...     ...                                                ...        ...   \n5543  K292F  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.494292   \n5544  K292E  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.211302   \n5545  K292N  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.305758   \n5546  K292A  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.420282   \n5547  K292Y  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.511485   \n\n      DMS_score_bin  position_mut AS_old AS_new  \n1919            1.0           102      T      Q  \n1920            1.0           102      T      P  \n1921            1.0           102      T      R  \n1922            1.0           102      T      Y  \n1923            1.0           102      T      V  \n...             ...           ...    ...    ...  \n5543            1.0           292      K      F  \n5544            1.0           292      K      E  \n5545            1.0           292      K      N  \n5546            1.0           292      K      A  \n5547            1.0           292      K      Y  \n\n[3629 rows x 7 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mutant</th>\n      <th>mutated_sequence</th>\n      <th>DMS_score</th>\n      <th>DMS_score_bin</th>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th>AS_new</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1919</th>\n      <td>T102Q</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.516971</td>\n      <td>1.0</td>\n      <td>102</td>\n      <td>T</td>\n      <td>Q</td>\n    </tr>\n    <tr>\n      <th>1920</th>\n      <td>T102P</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.344032</td>\n      <td>1.0</td>\n      <td>102</td>\n      <td>T</td>\n      <td>P</td>\n    </tr>\n    <tr>\n      <th>1921</th>\n      <td>T102R</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.224089</td>\n      <td>1.0</td>\n      <td>102</td>\n      <td>T</td>\n      <td>R</td>\n    </tr>\n    <tr>\n      <th>1922</th>\n      <td>T102Y</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.365929</td>\n      <td>1.0</td>\n      <td>102</td>\n      <td>T</td>\n      <td>Y</td>\n    </tr>\n    <tr>\n      <th>1923</th>\n      <td>T102V</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.252546</td>\n      <td>1.0</td>\n      <td>102</td>\n      <td>T</td>\n      <td>V</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5543</th>\n      <td>K292F</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.494292</td>\n      <td>1.0</td>\n      <td>292</td>\n      <td>K</td>\n      <td>F</td>\n    </tr>\n    <tr>\n      <th>5544</th>\n      <td>K292E</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.211302</td>\n      <td>1.0</td>\n      <td>292</td>\n      <td>K</td>\n      <td>E</td>\n    </tr>\n    <tr>\n      <th>5545</th>\n      <td>K292N</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.305758</td>\n      <td>1.0</td>\n      <td>292</td>\n      <td>K</td>\n      <td>N</td>\n    </tr>\n    <tr>\n      <th>5546</th>\n      <td>K292A</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.420282</td>\n      <td>1.0</td>\n      <td>292</td>\n      <td>K</td>\n      <td>A</td>\n    </tr>\n    <tr>\n      <th>5547</th>\n      <td>K292Y</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.511485</td>\n      <td>1.0</td>\n      <td>292</td>\n      <td>K</td>\n      <td>Y</td>\n    </tr>\n  </tbody>\n</table>\n<p>3629 rows × 7 columns</p>\n</div>"
      },
-     "execution_count": 65,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:51.611452Z",
-     "end_time": "2023-07-05T22:51:51.750969Z"
+     "start_time": "2023-07-05T23:58:56.722008Z",
+     "end_time": "2023-07-05T23:58:56.826402Z"
     }
    },
    "outputs": [],
@@ -130,11 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:51.754671Z",
-     "end_time": "2023-07-05T22:51:51.764768Z"
+     "start_time": "2023-07-05T23:58:56.825843Z",
+     "end_time": "2023-07-05T23:58:56.828951Z"
     }
    },
    "outputs": [],
@@ -162,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:51.786144Z",
-     "end_time": "2023-07-05T22:51:52.205882Z"
+     "start_time": "2023-07-05T23:58:56.829880Z",
+     "end_time": "2023-07-05T23:58:57.137147Z"
     }
    },
    "outputs": [
@@ -190,7 +199,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 68,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -227,11 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:52.213911Z",
-     "end_time": "2023-07-05T22:51:52.472919Z"
+     "start_time": "2023-07-05T23:58:57.142090Z",
+     "end_time": "2023-07-05T23:58:57.489596Z"
     }
    },
    "outputs": [
@@ -247,7 +256,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 69,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -282,11 +291,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:52.485913Z",
-     "end_time": "2023-07-05T22:51:52.731691Z"
+     "start_time": "2023-07-05T23:58:57.608829Z",
+     "end_time": "2023-07-05T23:58:57.874949Z"
     }
    },
    "outputs": [
@@ -302,7 +311,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 70,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -336,11 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:52.736547Z",
-     "end_time": "2023-07-05T22:51:53.050163Z"
+     "start_time": "2023-07-05T23:58:57.880890Z",
+     "end_time": "2023-07-05T23:58:58.188184Z"
     }
    },
    "outputs": [
@@ -364,7 +373,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 71,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -402,11 +411,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:53.056589Z",
-     "end_time": "2023-07-05T22:51:53.328985Z"
+     "start_time": "2023-07-05T23:58:58.195583Z",
+     "end_time": "2023-07-05T23:58:58.472043Z"
     }
    },
    "outputs": [
@@ -430,7 +439,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 72,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -473,11 +482,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:53.334375Z",
-     "end_time": "2023-07-05T22:51:53.601253Z"
+     "start_time": "2023-07-06T00:00:33.277791Z",
+     "end_time": "2023-07-06T00:00:33.565944Z"
     }
    },
    "outputs": [
@@ -493,7 +502,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 73,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -530,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -574,8 +583,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:53.603113Z",
-     "end_time": "2023-07-05T22:51:53.862261Z"
+     "start_time": "2023-07-05T23:58:58.816366Z",
+     "end_time": "2023-07-05T23:58:59.101315Z"
     }
    }
   },
@@ -588,11 +597,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:53.863275Z",
-     "end_time": "2023-07-05T22:51:53.873584Z"
+     "start_time": "2023-07-05T23:58:59.101075Z",
+     "end_time": "2023-07-05T23:58:59.110224Z"
     }
    },
    "outputs": [
@@ -601,7 +610,7 @@
       "text/plain": "     t1_std    t2_std    pr_std   dna_std  tetra_std   reg_std\n0  0.179812  0.043157  0.035324  0.208569    0.17976  0.042898",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>t1_std</th>\n      <th>t2_std</th>\n      <th>pr_std</th>\n      <th>dna_std</th>\n      <th>tetra_std</th>\n      <th>reg_std</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.179812</td>\n      <td>0.043157</td>\n      <td>0.035324</td>\n      <td>0.208569</td>\n      <td>0.17976</td>\n      <td>0.042898</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 75,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,11 +662,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:53.883648Z",
-     "end_time": "2023-07-05T22:51:54.084076Z"
+     "start_time": "2023-07-05T23:58:59.110289Z",
+     "end_time": "2023-07-05T23:58:59.365301Z"
     }
    },
    "outputs": [
@@ -665,7 +674,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 76,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -685,11 +694,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:54.070726Z",
-     "end_time": "2023-07-05T22:51:54.247551Z"
+     "start_time": "2023-07-05T23:58:59.365946Z",
+     "end_time": "2023-07-05T23:58:59.527107Z"
     }
    },
    "outputs": [
@@ -697,7 +706,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 77,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -717,11 +726,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:54.249676Z",
-     "end_time": "2023-07-05T22:51:54.415141Z"
+     "start_time": "2023-07-05T23:58:59.529093Z",
+     "end_time": "2023-07-05T23:58:59.683767Z"
     }
    },
    "outputs": [
@@ -729,7 +738,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 78,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -749,11 +758,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:54.415983Z",
-     "end_time": "2023-07-05T22:51:54.586335Z"
+     "start_time": "2023-07-05T23:58:59.685855Z",
+     "end_time": "2023-07-05T23:58:59.920363Z"
     }
    },
    "outputs": [
@@ -761,7 +770,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 79,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -781,11 +790,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:54.587705Z",
-     "end_time": "2023-07-05T22:51:54.749832Z"
+     "start_time": "2023-07-05T23:58:59.920253Z",
+     "end_time": "2023-07-05T23:59:00.220798Z"
     }
    },
    "outputs": [
@@ -793,7 +802,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 80,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -813,11 +822,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:54.750886Z",
-     "end_time": "2023-07-05T22:51:55.093158Z"
+     "start_time": "2023-07-05T23:59:00.222535Z",
+     "end_time": "2023-07-05T23:59:00.403355Z"
     }
    },
    "outputs": [
@@ -825,7 +834,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 81,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -854,11 +863,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:55.093996Z",
-     "end_time": "2023-07-05T22:51:55.097442Z"
+     "start_time": "2023-07-05T23:59:00.404338Z",
+     "end_time": "2023-07-05T23:59:00.408185Z"
     }
    },
    "outputs": [
@@ -904,27 +913,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:55.098583Z",
-     "end_time": "2023-07-05T22:51:55.099782Z"
+     "start_time": "2023-07-05T23:59:00.409420Z",
+     "end_time": "2023-07-05T23:59:00.410637Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:55.100579Z",
-     "end_time": "2023-07-05T22:51:55.101760Z"
+     "start_time": "2023-07-05T23:59:00.411203Z",
+     "end_time": "2023-07-05T23:59:00.412669Z"
     }
    }
   }
