--- a/data_exploration/pca_hierarchical_plotting_domains.ipynb
+++ b/data_exploration/pca_hierarchical_plotting_domains.ipynb
@@ -1,15 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### PCA, Hierarchical clustering and plotting implemented for each domain\n",
+    "In this notebook, we performed a pca dimension reduction, continued with a hierarchical clustering and plotted the results for different domains. To plot the different domains, you need to select the domain you want to plot in the cell with \"### EDIT FOR THE DOMAIN of your liking ###\"."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "C:\\Users\\ennow\\anaconda3\\envs\\dms\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
      ]
     }
    ],
@@ -31,14 +41,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T21:30:24.512256300Z",
-     "start_time": "2023-07-03T21:30:24.400410200Z"
+     "end_time": "2023-07-06T07:57:38.695170200Z",
+     "start_time": "2023-07-06T07:57:37.801648500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "aa = pd.read_csv('../DMS_data/aminoacids.csv')\n",
@@ -49,14 +59,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T21:30:24.681123200Z",
-     "start_time": "2023-07-03T21:30:24.516272600Z"
+     "end_time": "2023-07-06T07:57:38.860624800Z",
+     "start_time": "2023-07-06T07:57:38.695170200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Saving the different domains for better accessibility\n",
@@ -89,47 +99,47 @@
     "\n",
     "t1_domain = dc.rmv_na(dc.df_transform(doc.slice_domain(df, start= t1_start, end= t1_end)))\n",
     "t1_list = doc.slice_domain(df, start= t1_start, end= t1_end)\n",
-    "t1_dist = de.dms_distance_matrix(t1_list)\n",
+    "t1_dist = de.dms_distance_matrix_wt(t1_list)\n",
     "\n",
     "t2_domain = dc.rmv_na(dc.df_transform(doc.slice_domain(df, start= t2_start, end= t2_end)))\n",
     "t2_list = doc.slice_domain(df, start= t2_start, end= t2_end)\n",
-    "t2_dist = de.dms_distance_matrix(t2_list)\n",
+    "t2_dist = de.dms_distance_matrix_wt(t2_list)\n",
     "\n",
     "pr_domain = dc.rmv_na(dc.df_transform(doc.slice_domain(df, start= pr_start, end= pr_end)))\n",
     "pr_list = doc.slice_domain(df, start= pr_start, end= pr_end)\n",
-    "pr_dist = de.dms_distance_matrix(pr_list)\n",
+    "pr_dist = de.dms_distance_matrix_wt(pr_list)\n",
     "\n",
     "dna_domain = dc.rmv_na(dc.df_transform(doc.slice_domain(df, start= dna_start, end= dna_end)))\n",
     "dna_list = doc.slice_domain(df, start= dna_start, end= dna_end)\n",
-    "dna_dist = de.dms_distance_matrix(dna_list)\n",
+    "dna_dist = de.dms_distance_matrix_wt(dna_list)\n",
     "\n",
     "tetra_domain = dc.rmv_na(dc.df_transform(doc.slice_domain(df, start= tetra_start, end= tetra_end)))\n",
     "tetra_list = doc.slice_domain(df, start= tetra_start, end= tetra_end)\n",
-    "tetra_dist = de.dms_distance_matrix(tetra_list)\n",
+    "tetra_dist = de.dms_distance_matrix_wt(tetra_list)\n",
     "\n",
     "reg_domain = dc.rmv_na(dc.df_transform(doc.slice_domain(df, start= reg_start, end= reg_end)))\n",
     "reg_list = doc.slice_domain(df, start= reg_start, end= reg_end)\n",
-    "reg_dist = de.dms_distance_matrix(reg_list)\n",
+    "reg_dist = de.dms_distance_matrix_wt(reg_list)\n",
     "\n",
     "# to be more efficient for greater amounts of domains: Transfer into a dictionary"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T21:30:25.197550800Z",
-     "start_time": "2023-07-03T21:30:24.696638300Z"
+     "end_time": "2023-07-06T07:57:39.329543700Z",
+     "start_time": "2023-07-06T07:57:38.876206600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "(13, 13)"
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,17 +151,17 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T21:30:25.317800800Z",
-     "start_time": "2023-07-03T21:30:25.197550800Z"
+     "end_time": "2023-07-06T07:57:39.447721900Z",
+     "start_time": "2023-07-06T07:57:39.329543700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "### EDIT FOR THE DOMAIN AT QUESTION ###\n",
+    "### EDIT FOR THE DOMAIN of your liking ###\n",
     "\n",
     "#Variable containing the domain, the plots are created for\n",
     "domain = dna_dist\n",
@@ -162,14 +172,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T21:30:25.421876400Z",
-     "start_time": "2023-07-03T21:30:25.317800800Z"
+     "end_time": "2023-07-06T07:57:39.563865Z",
+     "start_time": "2023-07-06T07:57:39.447721900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
@@ -186,8 +196,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T21:30:25.844934700Z",
-     "start_time": "2023-07-03T21:30:25.413871200Z"
+     "end_time": "2023-07-06T07:57:40.037587Z",
+     "start_time": "2023-07-06T07:57:39.563865Z"
     }
    }
   },
@@ -200,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -217,14 +227,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T21:30:25.974465600Z",
-     "start_time": "2023-07-03T21:30:25.844934700Z"
+     "end_time": "2023-07-06T07:57:40.192546100Z",
+     "start_time": "2023-07-06T07:57:40.045618700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
@@ -236,13 +246,13 @@
     }
    ],
    "source": [
-    "de.pca_clustering_plot(domain, optimal_num_cluster= best_clusters, title= title)"
+    "de.pca_hierarchical_plot(domain, optimal_num_cluster= best_clusters, title= title)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T21:30:26.399954100Z",
-     "start_time": "2023-07-03T21:30:25.967050400Z"
+     "end_time": "2023-07-06T07:57:40.690598800Z",
+     "start_time": "2023-07-06T07:57:40.192546100Z"
     }
    }
   }
