--- a/data_exploration/Hierarchical_clustering.ipynb
+++ b/data_exploration/Hierarchical_clustering.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-03T20:32:54.538443200Z",
-     "start_time": "2023-07-03T20:32:54.526218800Z"
+     "end_time": "2023-07-06T14:58:59.541361900Z",
+     "start_time": "2023-07-06T14:58:58.253499400Z"
     }
    },
    "outputs": [],
@@ -31,26 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "fpath = '../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\n",
     "df = pd.read_csv(fpath)\n",
     "\n",
     "# create distance matrix\n",
-    "X=de.dms_distance_matrix(dc.aufteilung_mut_pos(df))"
+    "X=de.dms_distance_matrix_wt(dc.aufteilung_mut_pos(df))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T20:36:47.119486100Z",
-     "start_time": "2023-07-03T20:36:47.069465Z"
+     "end_time": "2023-07-06T14:58:59.672657800Z",
+     "start_time": "2023-07-06T14:58:59.541361900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
@@ -62,9 +62,9 @@
     },
     {
      "data": {
-      "text/plain": "<seaborn.matrix.ClusterGrid at 0x181a00fab50>"
+      "text/plain": "<seaborn.matrix.ClusterGrid at 0x17b1b5d8b20>"
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -90,14 +90,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T20:36:50.680026600Z",
-     "start_time": "2023-07-03T20:36:49.661045Z"
+     "end_time": "2023-07-06T14:59:00.700322300Z",
+     "start_time": "2023-07-06T14:58:59.672657800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stderr",
@@ -119,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-03T20:39:05.301137Z",
-     "start_time": "2023-07-03T20:39:05.223658100Z"
+     "end_time": "2023-07-06T14:59:00.963926100Z",
+     "start_time": "2023-07-06T14:59:00.706668200Z"
     }
    }
   }
