--- a/Visualization/HeatMap.ipynb
+++ b/Visualization/HeatMap.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### HEATMAPPING\n",
+    "In this notebook, I tested methods of heatmapping."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -12,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "#Dario testet aus ob er den Datensatz: \"P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv\" in einer Heatmap mit den DMS scores darstellen kan"
+    "#Dario testing if he can plot followin Dataset: \"P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv\" in a Heatmap mit den DMS scores darstellen kan"
    ]
   },
   {
